--- a/mom.html
+++ b/mom.html
@@ -40,6 +40,7 @@
 					});
 					
 					var url = "https://line.me/R/msg/text/?"+$("#copyInput").val();
+					$(".formInputs").val("");
 					window.open(url,'_blank');
 				});
 			});
