--- a/mom.html
+++ b/mom.html
@@ -82,7 +82,7 @@
 					
 						
 					</form>
-					<button id="doCopy">傳送到LINE</button>
+					<button type="button" class="btn btn-success" id="doCopy">傳送到LINE</button>
 				</div>
 			</div>
 			
