--- a/a/testJquery2.html
+++ b/a/testJquery2.html
@@ -34,7 +34,7 @@
                      
                     for(x=1;x<=7;x++){
                         // sTd +="<td id='tb"+i+x+"'></td>";
-                        sTd +="<td class='tdClass' align='center'>"+i+x+"</td>";
+                        sTd +="<td class='tdClass' align='center' style='vertical-align: middle;'>"+i+x+"</td>";
 
                     }
 
@@ -53,7 +53,7 @@
         </script>
     </head>
     <body  >
-        <div style="height: 90vh">
+        <div style="height: 90vh;margin-top:10px">
             <table class="table table-bordered" style="height: 90vh">
 
             </table>
