--- a/pork/pork.html
+++ b/pork/pork.html
@@ -45,7 +45,12 @@
 					  if(number === undefined || number == 0) return;
 					  var name = $( "#name"+id ).val();
 					  var unit = $( "#unit"+id ).val();
-					  message = message + name + "：" + number + " "+unit +"%0D%0A";
+					  if( $( this ).data('mark') ==='true'){
+						message = message + name + "：" + number + " ("+unit +")%0D%0A";
+					  }else{
+						message = message + name + "：" + number + " "+unit +"%0D%0A";
+					  }
+					 
 					  $("#copyInput").val(message);
 					});
 					
