--- a/pork/pork.html
+++ b/pork/pork.html
@@ -46,7 +46,7 @@
 					  var name = $( "#name"+id ).val();
 					  var unit = $( "#unit"+id ).val();
 					  if( $( this ).data('mark') ==='true'){
-						message = message + name + "：" + number + " ("+unit +")%0D%0A";
+						message = message + name + "：" + number + " 【"+unit +"】 %0D%0A";
 					  }else{
 						message = message + name + "：" + number + " "+unit +"%0D%0A";
 					  }
