--- a/mom.html
+++ b/mom.html
@@ -79,7 +79,7 @@
 					  if(number === undefined || number == 0) return;
 					  var name = $( "#name"+id ).val();
 					  var unit = $( "#unit"+id ).val();
-					  if( $( this ).data('mark') ==='true'){
+					  if( $( this ).data('mark') =='true' ||  $( this ).data('mark') ==true){
 						message = message + name + "：" + number + " 【"+unit +"】 %0D%0A";
 					  }else{
 						message = message + name + "：" + number + " "+unit +"%0D%0A";
