--- a/mom.html
+++ b/mom.html
@@ -80,7 +80,7 @@
 					  var name = $( "#name"+id ).val();
 					  var unit = $( "#unit"+id ).val();
 					  if( $( this ).data('mark') =='true' ||  $( this ).data('mark') ==true){
-						message = message + name + "：" + number + " 【"+unit +"】 %0D%0A";
+						message = message + name + "：" + number + " %E3%80%90"+unit +"%E3%80%91 %0D%0A";
 					  }else{
 						message = message + name + "：" + number + " "+unit +"%0D%0A";
 					  }
